[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
solana-program = "=1.18.17"
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "=0.29.0"
pyth-solana-receiver-sdk = "=0.1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
