# [package]
# name = "test-utils"
# version = "0.1.0"
# edition = "2021"
# publish = false

# [features]
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# cpi = ["no-entrypoint"]
# default = []

# [dependencies]
# # anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# anchor-lang = { workspace = true }
# anchor-spl = { workspace = true }
# pyth-solana-receiver-sdk = {workspace = true}

# # [dev-dependencies]
# # solana-program-test = "~1.17"

# [dependencies.markets]
# path = "../programs/pathfinder"