[package]
name = "assistant-to-the-regional-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "assistant_to_the_regional_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-spl = { version = "0.30.1", features = ["token", "metadata"] }
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
pathfinder = { git = "https://github.com/dependable-labs/pathfinder", branch = "develop", features = ["no-entrypoint"]}