[package]
name = "markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "markets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.18.26"

anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
pyth-sdk-solana = "=0.10.1"
pyth-solana-receiver-sdk = "0.3.0"
spl-associated-token-account = "2.2.0"

[dev-dependencies]
solana-sdk = "=1.18.26"
solana-program-test = "=1.18.26" 
test-case = "3.3.1"

anyhow = "1.0.66"

