[package]
name = "markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "markets"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
pyth-solana-receiver-sdk = "0.3.0"
arrayref = "0.3.6"
bytemuck = { version = "1.4.0", features = ["min_const_generics", "derive"]}
switchboard-on-demand = { path = "../switchboard-on-demand", features = ["no-entrypoint"] }
uint = "=0.9.1"
